# moneybot-tg-app

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  servers.py
backend/app/core/: alerts.py  deps.py  encryption.py  proxy.py  security.py  telegram.py
backend/app/models/: __init__.py  notification.py  server.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_server_auth_fields.py
nginx/: default.conf
tg-bot/: .dockerignore  Dockerfile  pyproject.toml
tg-bot/bot/: config.py  keyboards.py  main.py  notifications.py
tg-bot/bot/handlers/: commands.py  start.py
tg-mini-app/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tg-mini-app/src/: App.tsx  index.css  main.tsx
tg-mini-app/src/api/: client.ts  endpoints.ts
tg-mini-app/src/components/: BottomNav.tsx  ErrorBoundary.tsx  Layout.tsx  PnlCard.tsx  ServerSelector.tsx  StatusBadge.tsx
tg-mini-app/src/components/charts/: DailyActivityChart.tsx  DrawdownChart.tsx  HourlyChart.tsx  PnlChart.tsx
tg-mini-app/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Skeleton.tsx
tg-mini-app/src/hooks/: useAuth.ts  useTelegram.ts
tg-mini-app/src/lib/: telegram.ts
tg-mini-app/src/pages/: Accounts.tsx  Analytics.tsx  BotControl.tsx  Dashboard.tsx  GridDetail.tsx  Grids.tsx  Logs.tsx  NotFound.tsx  Servers.tsx  Settings.tsx  Trades.tsx
tg-mini-app/src/stores/: authStore.ts  serverStore.ts
