[project]
name = "moneybot-tg-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis[hiredis]>=5.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
